Contact form hidden by default to prevent occasional flash of content before entry animation.

--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -28,6 +28,7 @@
   width: 100%;
   max-width: 40rem;
   margin: 1rem 0;
+  visibility: hidden;
 
   @media screen and (min-width: 700px) {
     margin: 3rem 0;
